<resources>
    <string name="app_name">ThinkLearing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Think Learing</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Ana Sayfa</string>
    <string name="menu_report">Genel Rapor</string>
    <string name="menu_words">Özel Kelimelerim</string>
    <string name="menu_error">Fireler</string>
    <string name="menu_about">Hakkında</string>
    <string name="menu_connection">İletişim</string>


    <string name="main_ingilizce_nturkce">İngilizce Türkçe</string>
    <string name="main_trk_ing">Türkçe İngilizce</string>
    <string name="main_ingEs">İngilizce Eş Anlam</string>
    <string name="main_ingPhre">Phrasel Verbs</string>
    <string name="main_ingZit">İngilizce Zıt Anlam</string>
    <string name="main_ingConj">Conjuntions</string>
    <string name="main_mustKnow">Must Know</string>


    <string name="level_study">Beni Çalıştır</string>
    <string name="level_words">Kelime Eşleştirme</string>
    <string name="level_exam">Beni Test Et</string>


</resources>