<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_word"
            android:icon="@drawable/ic_menu_text"
            android:title="@string/menu_words" />
        <item
            android:id="@+id/nav_error"
            android:icon="@drawable/ic_menu_error"
            android:title="@string/menu_error" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_conn"
            android:icon="@drawable/ic_menu_conn"
            android:title="@string/menu_connection" />
    </group>

</menu>
