<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingTop="10dp"
    tools:context=".mainFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/stsTxtMainHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Ana Başlık"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/lvlBtnStudy"
                style="@style/MainMenuButton"
                android:text="@string/level_study" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/lvlBtnMatch"
                style="@style/MainMenuButton"
                android:text="@string/level_words" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/mainBtnPhr"
                style="@style/MainMenuButton"
                android:text="@string/level_exam" />


        </LinearLayout>


    </LinearLayout>

</FrameLayout>